# aura-os

./: .env.example  .gitignore  Cargo.toml  DESKTOP_REGRESSION_SIGNOFF.md  MOBILE_IOS_SIGNOFF.md  README.md  index.html  netlify.toml  package.json  requirements.md
apps/aura-os-desktop/: Cargo.toml  build.rs
apps/aura-os-desktop/src/: events.rs  handlers.rs  main.rs  route_state.rs  updater.rs
apps/aura-os-desktop/src/frontend/: config.rs  dev_server.rs  mod.rs  routing.rs
apps/aura-os-desktop/src/harness/: binary.rs  external.rs  mod.rs  sidecar.rs
apps/aura-os-desktop/src/init/: cli.rs  crash.rs  env.rs  init_script.rs  logging.rs  mod.rs  paths.rs  single_instance.rs
apps/aura-os-desktop/src/net/: loopback.rs  mod.rs  probe.rs  server.rs
apps/aura-os-desktop/src/ui/: chrome.rs  (+5 more)
apps/aura-os-ide/: Cargo.toml
apps/aura-os-ide/src/: lib.rs
apps/aura-os-server/: Cargo.toml
apps/aura-os-server/src/: agent_events.rs  app_builder.rs  auth_guard.rs  billing_bridge.rs  billing_rollup.rs  capture_auth.rs  dto.rs  error.rs  harness_client.rs  harness_gateway.rs  harness_super_agent_driver.rs  lib.rs  loop_events_bridge.rs  loop_log.rs  main.rs  network_bridge.rs  orbit_client.rs  orbit_guard.rs  orchestration_store.rs  persistence.rs  process_automaton.rs  reconciler.rs  router.rs  state.rs  super_agent_migration.rs  super_agent_migration_seed.rs  sync_state.rs
apps/aura-os-server/tests/: agent_create_test.rs  agent_tools_policy_test.rs  agent_update_ceo_test.rs  api_tests.rs  automation_session_counting_test.rs  autonomous_recovery_replay.rs  browser_api_tests.rs  capture_auth_test.rs  chat_events_test.rs  concurrent_agents.rs  concurrent_agents_stress_test.rs  dev_loop_dod_regression.rs  executor_janitor_test.rs  feedback_api_tests.rs  harness_client_test.rs  harness_proxy_test.rs  harness_super_agent_driver_test.rs  remote_harness_base_url_test.rs  session_delete_test.rs  session_rotation_test.rs  single_task_retry_request_id_golden.rs  storage_integration_test.rs  super_agent_reset_test.rs
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: handlers.rs  main.rs  updater.rs
apps/server/: Cargo.toml
apps/server/src/: app_builder.rs  channel_ext.rs  dto.rs  error.rs  lib.rs  loop_log.rs  main.rs  network_bridge.rs  persistence.rs  router.rs  session_init.rs  state.rs
apps/server/tests/: api_tests.rs
aura-auth/: Cargo.toml
aura-auth/src/: error.rs  lib.rs  service.rs
aura-billing/: Cargo.toml
aura-billing/src/: client.rs  error.rs  lib.rs  pricing.rs
aura-chat/: Cargo.toml
aura-chat/src/: chat.rs  chat_tool_executor.rs  error.rs  lib.rs
aura-desktop/: Cargo.toml  build.rs
aura-desktop/src/: main.rs  updater.rs
aura-engine/: Cargo.toml
aura-engine/src/: build_verify.rs  engine.rs  error.rs  events.rs  file_ops.rs  lib.rs  metrics.rs
aura-engine/src/engine/: build_fix.rs  executor.rs  mod.rs  orchestrator.rs  parser.rs  prompts.rs  shell.rs  types.rs  write_coordinator.rs
aura-engine/tests/: engine_tests.rs
aura-github/: Cargo.toml
aura-github/src/: error.rs  lib.rs
aura-server/: Cargo.toml
aura-server/src/: dto.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
aura-server/src/handlers/: agents.rs  auth.rs  billing.rs  chat.rs  dev_loop.rs  github.rs  log.rs  mod.rs  orgs.rs  projects.rs  specs.rs  sprints.rs  tasks.rs  ws.rs
aura-server/tests/: api_tests.rs
aura-services/: Cargo.toml
aura-services/src/: auth.rs  chat.rs  chat_tool_executor.rs  chat_tools.rs  claude.rs  error.rs  lib.rs  org.rs  project.rs  session.rs  spec_gen.rs  task.rs  task_extraction.rs  tools.rs
aura-services/src/spec_gen/: mod.rs  parser.rs  streaming.rs
aura-services/tests/: agent_session_tests.rs  project_tests.rs  task_tests.rs
aura-settings/: Cargo.toml
aura-settings/src/: encryption.rs  error.rs  lib.rs  mask.rs  service.rs
aura-settings/tests/: integration.rs
aura-specs/: Cargo.toml
aura-specs/src/: error.rs
aura-specs/src/spec_gen/: mod.rs  parser.rs  streaming.rs
aura-tasks/: Cargo.toml
aura-tasks/src/: error.rs  lib.rs
crates/aura-os-agent-runtime/: Cargo.toml
crates/aura-os-agent-runtime/src/: audit.rs  ceo.rs  events.rs  lib.rs  policy.rs  prompt.rs  state.rs  tier.rs
crates/aura-os-agent-templates/: Cargo.toml
crates/aura-os-agent-templates/src/: lib.rs  prompt.rs  template.rs  tier.rs
crates/aura-os-agents/: Cargo.toml
crates/aura-os-agents/src/: convert.rs  errors.rs  instance.rs  lib.rs  merge.rs
crates/aura-os-auth/: Cargo.toml
crates/aura-os-auth/src/: error.rs  lib.rs
crates/aura-os-browser/: Cargo.toml
crates/aura-os-browser/src/: backend.rs  cdp_backend.rs  config.rs  error.rs  lib.rs  manager.rs
crates/aura-os-browser/tests/: cdp_smoke.rs
crates/aura-os-core/: Cargo.toml
crates/aura-os-core/src/: channel.rs  entities.rs  enums.rs  expertise.rs  harness_id.rs  ids.rs  lib.rs  listing_status.rs  permissions.rs  settings.rs  testutil.rs
crates/aura-os-core/tests/: round_trips.rs
crates/aura-os-harness/: Cargo.toml
crates/aura-os-harness/src/: automaton_client.rs  client.rs  error.rs  harness.rs  lib.rs  local_harness.rs  session.rs  signals.rs  swarm_harness.rs  test_support.rs  ws_bridge.rs
crates/aura-os-integrations/: Cargo.toml
crates/aura-os-integrations/src/: client.rs  control_plane.rs  error.rs  lib.rs  manifest.rs  trusted_methods.rs  workspace_tools.rs
crates/aura-os-link/: Cargo.toml
crates/aura-os-link/src/: automaton_client.rs  harness.rs  harness_url.rs  lib.rs  local_harness.rs  runner.rs  swarm_harness.rs  ws_bridge.rs
crates/aura-os-orgs/: Cargo.toml
crates/aura-os-orgs/src/: lib.rs
crates/aura-os-process/: Cargo.toml
crates/aura-os-process/src/: error.rs  executor.rs  lib.rs  process_app.rs  process_store.rs  scheduler.rs
crates/aura-os-sessions/: Cargo.toml
crates/aura-os-sessions/src/: lib.rs  params.rs  session_service.rs  tests.rs
crates/aura-os-sessions/tests/: context_rollover.rs
orbit-test-2/: Cargo.toml
orbit-test-2/.aura/: last_run_metrics.json  run_history.jsonl  task_history.jsonl
orbit-test-2/src/: lib.rs  main.rs
(+3555 files in other folders)
