[workspace]
members = [
    "crates/infra/core",
    "crates/infra/provider",
    "crates/domain/billing",
    "crates/ai/link",
    "crates/domain/orgs",
    "crates/domain/projects",
    "crates/domain/agents",
    "crates/domain/auth",
    "crates/domain/tasks",
    "crates/domain/sessions",
    "crates/domain/specs",
    "apps/desktop",
    "apps/server",
    "crates/domain/settings",
    "crates/infra/store",
    "crates/infra/terminal",
    "crates/infra/network",
    "crates/infra/orbit",
    "crates/infra/storage",
    "apps/ide",
]
resolver = "2"
