[workspace]
members = [
    "crates/aura-os-agents",
    "crates/aura-os-auth",
    "crates/aura-os-billing",
    "crates/aura-os-core",
    "crates/aura-os-integrations",
    "crates/aura-os-link",
    "crates/aura-os-network",
    "crates/aura-os-orgs",
    "crates/aura-os-projects",
    "crates/aura-os-sessions",
    "crates/aura-os-storage",
    "crates/aura-os-store",
    "crates/aura-os-super-agent",
    "crates/aura-os-tasks",
    "crates/aura-os-terminal",
    "crates/aura-os-process",
    "apps/aura-os-desktop",
    "apps/aura-os-server",
    "apps/aura-os-ide",
]
resolver = "2"
