[package]
name = "aura-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-settings = { path = "../aura-settings" }
aura-claude = { path = "../aura-claude" }
aura-tools = { path = "../aura-tools" }
aura-projects = { path = "../aura-projects" }
aura-tasks = { path = "../aura-tasks" }
aura-specs = { path = "../aura-specs" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures = "0.3"
thiserror = "1"
glob = "0.3"
regex = "1"
