[package]
name = "aura-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-server = { path = "../aura-server" }
axum = "0.7"
wry = "0.54"
tao = "0.34"
tokio = { version = "1", features = ["full"] }
dirs = "5"
image = "0.25.10"
rfd = "0.15.1"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
