[package]
name = "aura-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-settings = { path = "../aura-settings" }
aura-claude = { path = "../aura-claude" }
aura-billing = { path = "../aura-billing" }
aura-tools = { path = "../aura-tools" }
aura-projects = { path = "../aura-projects" }
aura-tasks = { path = "../aura-tasks" }
aura-agents = { path = "../aura-agents" }
aura-sessions = { path = "../aura-sessions" }
aura-chat = { path = "../aura-chat" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
regex = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
