[package]
name = "aura-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-settings = { path = "../aura-settings" }
aura-claude = { path = "../aura-claude" }
aura-billing = { path = "../aura-billing" }
aura-tools = { path = "../aura-tools" }
aura-orgs = { path = "../aura-orgs" }
aura-projects = { path = "../aura-projects" }
aura-agents = { path = "../aura-agents" }
aura-auth = { path = "../aura-auth" }
aura-github = { path = "../aura-github" }
aura-tasks = { path = "../aura-tasks" }
aura-sessions = { path = "../aura-sessions" }
aura-specs = { path = "../aura-specs" }
aura-chat = { path = "../aura-chat" }
aura-engine = { path = "../aura-engine" }
aura-terminal = { path = "../aura-terminal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio-stream = "0.1"
futures-core = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
