[package]
name = "aura-services"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-settings = { path = "../aura-settings" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-core = "0.3"
futures = "0.3"
bytes = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
