[package]
name = "aura-services"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-settings = { path = "../aura-settings" }
aura-claude = { path = "../aura-claude" }
aura-billing = { path = "../aura-billing" }
aura-tools = { path = "../aura-tools" }
aura-orgs = { path = "../aura-orgs" }
aura-projects = { path = "../aura-projects" }
aura-agents = { path = "../aura-agents" }
aura-auth = { path = "../aura-auth" }
aura-github = { path = "../aura-github" }
aura-tasks = { path = "../aura-tasks" }
aura-sessions = { path = "../aura-sessions" }
aura-specs = { path = "../aura-specs" }
aura-chat = { path = "../aura-chat" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
