[package]
name = "aura-specs"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-settings = { path = "../aura-settings" }
aura-claude = { path = "../aura-claude" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
