[workspace]

[package]
name = "orbit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
governor = "0.8"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
redis = { version = "0.27", features = ["tokio-comp"] }
