[package]
name = "aura-os-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-server = { path = "../aura-os-server" }
aura-os-ide = { path = "../aura-os-ide" }
axum = "0.7"
base64 = "0.22"
wry = "0.54"
tao = "0.34"
tokio = { version = "1", features = ["full"] }
dirs = "5"
dotenvy = "0.15"
image = "0.25.10"
rfd = "0.15.1"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cargo-packager-updater = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[package.metadata.packager]
product-name = "Aura"
identifier = "com.aura.desktop"
category = "DeveloperTool"
icons = ["assets/aura-icon.png"]
before-packaging-command = "cargo build --release --package aura-os-desktop"
resources = ["../../interface/dist"]

[package.metadata.packager.nsis]
installer-mode = "currentUser"

[package.metadata.packager.macos]
minimum-system-version = "10.15"
