[package]
name = "aura-os-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-server = { path = "../aura-os-server", features = ["browser-cdp"] }
aura-os-ide = { path = "../aura-os-ide" }
aura-os-store = { path = "../../crates/aura-os-store" }
aura-os-integrations = { path = "../../crates/aura-os-integrations" }
axum = { workspace = true }
base64 = { workspace = true }
wry = "0.54"
tao = "0.34"
tokio = { workspace = true }
dirs = { workspace = true }
dotenvy = "0.15"
image = "0.25.10"
rfd = "0.15.1"
open = "5"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cargo-packager-updater = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
muda = "0.15"

[package.metadata.packager]
product-name = "Aura"
identifier = "com.aura.desktop"
category = "DeveloperTool"
icons = ["../../interface/public/pwa-512.png", "assets/aura-icon.png"]
before-packaging-command = "cargo build --release --package aura-os-desktop"
resources = ["../../interface/dist", "resources"]

[package.metadata.packager.nsis]
installer-mode = "currentUser"

[package.metadata.packager.macos]
minimum-system-version = "10.15"

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "allow"
