[package]
name = "aura-os-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../../crates/aura-os-core" }
aura-os-integrations = { path = "../../crates/aura-os-integrations" }
aura-os-store = { path = "../../crates/aura-os-store" }
aura-os-billing = { path = "../../crates/aura-os-billing" }
aura-os-orgs = { path = "../../crates/aura-os-orgs" }
aura-os-projects = { path = "../../crates/aura-os-projects" }
aura-os-agents = { path = "../../crates/aura-os-agents" }
aura-os-auth = { path = "../../crates/aura-os-auth" }
aura-os-tasks = { path = "../../crates/aura-os-tasks" }
aura-os-sessions = { path = "../../crates/aura-os-sessions" }
aura-os-link = { path = "../../crates/aura-os-link" }
aura-os-terminal = { path = "../../crates/aura-os-terminal" }
aura-os-browser = { path = "../../crates/aura-os-browser" }
aura-os-super-agent = { path = "../../crates/aura-os-super-agent" }
aura-os-super-agent-profile = { path = "../../crates/aura-os-super-agent-profile" }
aura-protocol = { path = "../../crates/aura-protocol" }
aura-os-process = { path = "../../crates/aura-os-process" }
aura-os-network = { path = "../../crates/aura-os-network" }
aura-os-storage = { path = "../../crates/aura-os-storage" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "set-header"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-core = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
base64 = "0.22"
dashmap = "6"
dotenvy = "0.15"
hostname = "0.4"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }

[features]
default = ["legacy_super_agent_stream"]
# Enables the real Chromium/CDP-backed browser backend. Requires a local
# Chromium/Chrome executable at runtime; Chromium is launched lazily on
# the first browser spawn so the server boots even without it.
browser-cdp = ["aura-os-browser/cdp"]
# Phase 6 rollout switch: when ON, agents tagged `host_mode:in_process`
# (or legacy records that have not yet been migrated) are executed via
# the in-process `SuperAgentStream`. When OFF, the in-process branch
# returns an error and every super-agent turn is forced through the
# harness route. The feature is ON by default so existing deployments
# keep working; ops will flip it OFF as the final step of the Phase 6
# rollout, once metrics confirm harness parity.
legacy_super_agent_stream = []

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
aura-os-storage = { path = "../../crates/aura-os-storage", features = ["test-utils"] }
