[package]
name = "aura-os-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../../crates/aura-os-core" }
aura-os-integrations = { path = "../../crates/aura-os-integrations" }
aura-os-store = { path = "../../crates/aura-os-store" }
aura-os-billing = { path = "../../crates/aura-os-billing" }
aura-os-orgs = { path = "../../crates/aura-os-orgs" }
aura-os-projects = { path = "../../crates/aura-os-projects" }
aura-os-agents = { path = "../../crates/aura-os-agents" }
aura-os-auth = { path = "../../crates/aura-os-auth" }
aura-os-tasks = { path = "../../crates/aura-os-tasks" }
aura-os-sessions = { path = "../../crates/aura-os-sessions" }
aura-os-harness = { path = "../../crates/aura-os-harness" }
aura-os-link = { path = "../../crates/aura-os-link" }
aura-os-terminal = { path = "../../crates/aura-os-terminal" }
aura-os-browser = { path = "../../crates/aura-os-browser" }
aura-protocol = { path = "../../crates/aura-protocol" }
aura-os-network = { path = "../../crates/aura-os-network" }
aura-os-storage = { path = "../../crates/aura-os-storage" }
aura-loop-log-schema = { path = "../../crates/aura-loop-log-schema" }
aura-run-heuristics = { path = "../../crates/aura-run-heuristics" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true, features = ["fs", "set-header"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { workspace = true }
futures-core = "0.3"
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
dotenvy = "0.15"
hostname = "0.4"
local-ip-address = "0.6"
uuid = { workspace = true }
url = { workspace = true }

[features]
default = []
# Enables the real Chromium/CDP-backed browser backend. Requires a local
# Chromium/Chrome executable at runtime; Chromium is launched lazily on
# the first browser spawn so the server boots even without it.
browser-cdp = ["aura-os-browser/cdp"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
uuid = { workspace = true }
aura-os-storage = { path = "../../crates/aura-os-storage", features = ["test-utils"] }

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "allow"
