[package]
name = "aura-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../../crates/infra/core" }
aura-store = { path = "../../crates/infra/store" }
aura-settings = { path = "../../crates/domain/settings" }
aura-billing = { path = "../../crates/domain/billing" }
aura-orgs = { path = "../../crates/domain/orgs" }
aura-projects = { path = "../../crates/domain/projects" }
aura-agents = { path = "../../crates/domain/agents" }
aura-auth = { path = "../../crates/domain/auth" }
aura-tasks = { path = "../../crates/domain/tasks" }
aura-sessions = { path = "../../crates/domain/sessions" }
aura-link = { path = "../../crates/ai/link" }
aura-terminal = { path = "../../crates/infra/terminal" }
aura-network = { path = "../../crates/infra/network" }
aura-orbit = { path = "../../crates/infra/orbit" }
aura-storage = { path = "../../crates/infra/storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "set-header"] }
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
base64 = "0.22"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
aura-storage = { path = "../../crates/infra/storage", features = ["test-utils"] }
