[package]
name = "aura-os-agent-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-protocol = { path = "../aura-protocol" }
aura-os-agent-templates = { path = "../aura-os-agent-templates" }
aura-os-agents = { path = "../aura-os-agents" }
aura-os-projects = { path = "../aura-os-projects" }
aura-os-tasks = { path = "../aura-os-tasks" }
aura-os-sessions = { path = "../aura-os-sessions" }
aura-os-billing = { path = "../aura-os-billing" }
aura-os-orgs = { path = "../aura-os-orgs" }
aura-os-network = { path = "../aura-os-network" }
aura-os-storage = { path = "../aura-os-storage" }
aura-os-store = { path = "../aura-os-store" }
aura-os-link = { path = "../aura-os-link" }
aura-os-process = { path = "../aura-os-process" }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
