[package]
name = "aura-os-agent-templates"
version = "0.1.0"
edition = "2021"
description = "Portable agent template (system prompt, intent classifier rules, tool manifest) used to seed new Agent records."

[dependencies]
aura-os-core = { path = "../aura-os-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
