[package]
name = "aura-os-browser"
version = "0.1.0"
edition = "2021"
description = "Headless-browser session + project-aware initial URL resolution for aura-os."

[dependencies]
aura-os-core = { path = "../aura-os-core" }
tokio = { version = "1", features = ["fs", "net", "rt", "sync", "time", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
dashmap = "6"
once_cell = "1"
regex = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
async-trait = "0.1"
futures-util = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }
chromiumoxide = { version = "0.9", optional = true }

[features]
default = []
# Enables the real Chromium/CDP-backed `CdpBackend` (requires a local
# Chromium/Chrome executable at runtime). The base crate always ships the
# `StubBackend`; downstream crates opt in when they want rendering.
cdp = ["dep:chromiumoxide", "dep:futures-util", "dep:base64"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
