[package]
name = "aura-os-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["stable-channel"]
stable-channel = []
dev-channel = []
test-utils = ["dep:tempfile"]

[dependencies]
aura-protocol = { path = "../aura-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
