[package]
name = "aura-os-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-os-link = { path = "../aura-os-link" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
