[package]
name = "aura-os-link"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
async-trait = "0.1"
anyhow = "1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
