[package]
name = "aura-os-link"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-protocol = { path = "../aura-protocol" }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures-core = "0.3"
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
