[package]
name = "aura-os-process"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-os-store = { path = "../aura-os-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
thiserror = "1"
cron = "0.13"
