[package]
name = "aura-os-process"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-os-store = { path = "../aura-os-store" }
aura-os-link = { path = "../aura-os-link" }
aura-os-agents = { path = "../aura-os-agents" }
aura-os-orgs = { path = "../aura-os-orgs" }
aura-os-storage = { path = "../aura-os-storage" }
aura-os-tasks = { path = "../aura-os-tasks" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
thiserror = "1"
cron = "0.13"

[dev-dependencies]
tempfile = "3.27.0"
