[package]
name = "aura-os-process"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-os-link = { path = "../aura-os-link" }
aura-os-agents = { path = "../aura-os-agents" }
aura-os-orgs = { path = "../aura-os-orgs" }
aura-os-storage = { path = "../aura-os-storage" }
aura-os-tasks = { path = "../aura-os-tasks" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
cron = "0.13"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
