[package]
name = "aura-os-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-os-storage = { path = "../aura-os-storage" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
aura-os-store = { path = "../aura-os-store" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
